tests/negative/abilities/with_non_ability_alias.orng
// with_non_ability_alias.orng:7:17: error: expected an ability, got the type `A`
//         f[Int, A](4)
//                ^
// 
fn main() -> Int {
    with A(2) {
        f[Int, A](4)
    }
}

fn f[T, ability C](t: T) -> T with C {
    t
}

type A = Int